# websocketopenalgonsebse2july

./: .gitignore  docker-compose.yml  restart.sh  start_linux.sh  stop.sh
frontend/: .env.production  package-lock.json
frontend/src/: App.jsx  setupProxy.js
frontend/src/components/OptionChain/: OptionChainTable.jsx
frontend/src/components/Topbar/: topbar.jsx
frontend/src/components/admin/: AdminPanel.jsx
frontend/src/context/: AppContext.jsx
frontend/src/hooks/: useChainData.js
frontend/src/services/: socketioClient.js
openalgo/: .sample.env  app.py  pyproject.toml  requirements-nginx.txt  requirements.txt
openalgo/blueprints/: auth.py  brlogin.py  react_app.py
openalgo/broker/angel/api/: auto_login.py  data.py
openalgo/broker/upstox/api/: auto_login.py
openalgo/frontend/src/: App.tsx
openalgo/services/: angel_autologin_service.py  upstox_autologin_service.py
option-chain/: .env.example  .gitignore  LICENSE  README.md  app.py  auth.py  config.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
option-chain/collector/: scheduler.py  storage.py  tick_collector.py
option-chain/data/: schedule.json  ticks.db-shm  ticks.db-wal
option-chain/static/css/: compiled.css
option-chain/templates/: admin.html  base.html  layout.html  option_chain.html
option-chain/utils/: openalgo_client.py  option_chain.py  websocket_manager.py
pipeline/: README.md  pyproject.toml  start_all.sh  stop_all.sh
pipeline/config/: settings.py  symbols.py
pipeline/consumers/: dragonfly_consumer.py  influx_consumer.py
pipeline/producer/: tick_producer.py
pipeline/scheduler/: market_scheduler.py
pipeline/socketio_server/: server.py
ticks/: server.py
(+1 files in other folders)
