[project]
name = "option-chain"
version = "0.1.0"
description = "Standalone Flask Option Chain Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.3",
    "python-dotenv==1.0.1",
    "websocket-client==1.8.0",
    "cachetools==5.3.3",
    "pytz==2024.1",
    "openalgo==1.0.39",
    "numpy==2.2.4",
    "numba==0.63.0b1",
    "llvmlite==0.46.0b1",
    "apscheduler>=3.11.2",
    "influxdb-client>=1.50.0",
    "confluent-kafka>=2.14.0",
    "pymongo[srv]>=4.17.0",
    "pyjwt>=2.13.0",
    "bcrypt>=5.0.0",
]

[tool.setuptools]
packages = ["utils", "collector"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
